discussion/kv_engine/156747/156747_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46339: Expose "dcp" stats group for Prometheus

This adds the following Prometheus metrics:

kv_dcp_count
kv_dcp_producer_count
kv_dcp_total_data_size_bytes
kv_dcp_total_uncompressed_data_size_bytes
kv_dcp_total_queue
kv_dcp_queue_fill
kv_dcp_items_sent
kv_dcp_items_remaining
kv_dcp_num_running_backfills
kv_dcp_max_running_backfills

Corresponding to the existing cbstats metrics:

ep_dcp_count
ep_dcp_producer_count
ep_dcp_total_bytes
ep_dcp_total_uncompressed_data_size
ep_dcp_total_queue
ep_dcp_queue_fill
ep_dcp_items_sent
ep_dcp_items_remaining
ep_dcp_num_running_backfills
ep_dcp_max_running_backfills

Change-Id: I9b4ba351b145c8151e83f6fed7c3f2dbdfed2569

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-07-02 13:09:30.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-02 13:37:04.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/141/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(3915): error C2065: "ep": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/141/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/84/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3915:59: error: use of undeclared identifier "ep" [clang-diagnostic-error]
                    CBStatCollector col(add_stat, cookie, ep->getServerApi());
                                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3916:21: error: use of undeclared identifier "ep" [clang-diagnostic-error]
                    ep->doConnAggStatsInner(col.forBucket(ep->getName()),
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3916:59: error: use of undeclared identifier "ep" [clang-diagnostic-error]
                    ep->doConnAggStatsInner(col.forBucket(ep->getName()),
                                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/84/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3915:59:
error: use of undeclared identifier "ep" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/84/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/93/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3915:59:
error: use of undeclared identifier "ep"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/93/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/89/ : FAILURE

Compile error at [2021-07-02T13:30:30.610Z] ../kv_engine/engines/ep/src/ep_engine.cc:3915:59:
error: use of undeclared identifier "ep"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/89/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/89/ : FAILURE

Compile error at [2021-07-02T13:11:06.986Z] ../kv_engine/engines/ep/src/ep_engine.cc:3915:59:
error: use of undeclared identifier "ep"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/89/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/89/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/92/ : FAILURE

Compile error at [2021-07-02T13:31:07.200Z] ../kv_engine/engines/ep/src/ep_engine.cc:3915:59:
error: use of undeclared identifier "ep"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/92/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/90/ : FAILURE

Compile error at [2021-07-02T13:29:22.541Z] ../kv_engine/engines/ep/src/ep_engine.cc:3915:59:
error: ?ep? was not declared in this scope; did you mean ?sep??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/90/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8994/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
